--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
+    "motion": "^12.23.24",
+    "motion-primitives": "^0.1.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "prisma": "^6.19.0",
