--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
+    "googleapis": "^166.0.0",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "motion-primitives": "^0.1.0",
@@ -28,6 +30,7 @@
     "react-hook-form": "^7.66.1",
     "react-parallax-tilt": "^1.7.313",
     "react-social-icons": "^6.25.0",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
