--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.66.1",
     "react-parallax-tilt": "^1.7.313",
     "react-social-icons": "^6.25.0",
+    "resend": "^6.5.2",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
