--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "react-hook-form": "^7.66.1",
     "react-parallax-tilt": "^1.7.313",
     "react-social-icons": "^6.25.0",
+    "recharts": "^3.5.1",
     "resend": "^6.5.2",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
+    "ua-parser-js": "^2.0.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
