--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "motion-primitives": "^0.1.0",
-    "next": "16.0.3",
+    "next": "^16.0.3",
     "next-auth": "^4.24.13",
     "prisma": "^6.19.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
     "react-parallax-tilt": "^1.7.313",
     "react-social-icons": "^6.25.0",
@@ -44,11 +44,11 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "tsx": "^4.20.6",
