--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,10 @@
     "buildCommand": "prisma generate && next build",
     "framework": "nextjs",
     "installCommand": "npm install",
-    "outputDirectory": ".next"
+    "outputDirectory": ".next",
+    "functions": {
+        "middleware.ts": {
+            "runtime": "edge"
+        }
+    }
 }
