Remove incorrect Vercel functions config

--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,5 @@
     "buildCommand": "prisma generate && next build",
     "framework": "nextjs",
     "installCommand": "npm install",
-    "outputDirectory": ".next",
-    "functions": {
-        "middleware.ts": {
-            "runtime": "edge"
-        }
-    }
+    "outputDirectory": ".next"
 }
