--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@hello-pangea/dnd": "^18.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
@@ -20,8 +21,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.25",
     "googleapis": "^166.0.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "motion-primitives": "^0.1.0",
@@ -33,6 +35,7 @@
     "react-hook-form": "^7.66.1",
     "react-parallax-tilt": "^1.7.313",
     "react-social-icons": "^6.25.0",
+    "react-swipeable": "^7.0.2",
     "recharts": "^3.5.1",
     "resend": "^6.5.2",
     "stripe": "^20.0.0",
